--- a/templates/Python.xml
+++ b/templates/Python.xml
@@ -1,5 +1,5 @@
 <templateSet group="Python">
-  <template name="pudb" value="import pudb&#10;pudb.set_trace()" shortcut="ENTER" description="pudb" toReformat="true" toShortenFQNames="true">
+  <template name="pudb" value="import pudb;pudb.set_trace()" description="pudb" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="Python" value="true" />
     </context>
